Wed Mar 08 07:44:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSText.m: Fixes by Fred Kiefer for rich text display.
	* Source/NSStringDrawing.m: ditto
	* Headers/AppKit/NSText.h: ditto
	* Headers/AppKit/NSStringDrawing.h: ditto

Tue Mar 07 11:00:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWindow.m: Changes throughout to use correct offsets for
	differences between content rect and frame coordinates.
	Base coordinate system is that of the content rect, so conversions
	between screen and base coordinates are required except for
	borderless windows (where the frame rect is the same as the content
	rect).

Tue Mar 07 06:24:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSApplication.m: ([activateIgnoringOtherApps]) order key
	window to front when activating app.

Tue Mar  7 03:23:55 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	Warning: the gmodel format was changed by this fix - and it is
	going to be changing for a while.  If you are using CVS be sure to
	be always creating and running gmodels with the same CVS version.
	* Model/GMAppKit.m 
	([NSPopUpButton +createObjectForModelUnarchiver:]): Tidied.
	([NSPopUpButton -encodeWithModelArchiver:]): Encode isEnabled,
	tag, target, action.  Code untested.
	([NSPopUpButton -initWithModelUnarchiver:]): Bug fix - do not
	invoke super's implementation.  Removed useless call to
	synchronizeTitleAndSelectedItem.  Decode isEnabled, tag, target,
	action.  Tidied.

Mon Mar 06 20:09:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/gnustep/gui/GSMethodTable.h: Added method to set titlebar.
	* Headers/gnustep/gui/DPSOperators.h: ditto
	* Headers/gnustep/gui/NSGraphicsContext.h: ditto
	* Headers/gnustep/gui/PSOperators.h: ditto
	* Source/NSGraphicsContext.m: ditto
	* Source/NSWindow.m: Make calls to DPSsetinputstate() to set the
	titlebar for the window on change of key/main/normal state.
