@@ -1,3 +1,9 @@
+Wed Mar 08 13:15:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSWindow.m: Final (I hope) coordinate handling fixes to
+	use proper frame coordinates and offsets now that support is in
+	backend and WindowMaker bugs are fixed.
+
 Wed Mar 08 07:44:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/NSText.m: Fixes by Fred Kiefer for rich text display.
